# rtpc-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
example_assets/: extract_midi.py
example_assets/devices/: additive-synth.export.json  simple-synth.export.json
example_assets/sheets/: bach.json  mary.json  mega.json  mega_0.json  mega_1.json
frontend/: check_ws.py  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: recorder-worklet.js
frontend/src/: App.tsx  main.tsx
frontend/src/assets/: reference_signal.json
frontend/src/components/: MissingFilesList.tsx
frontend/src/context/: IndexedDBProvider.tsx  MessageTypes.ts  WebSocketProvider.tsx  WebSocketTypes.ts  indexedDBContext.ts  useIndexedDB.ts  useWebSocket.ts
frontend/src/lib/: indexedDB.ts  music.ts  recorder.ts  utils.ts
src/: index.css  main.tsx
src-tauri/: 2  Cargo.toml  reference_mls.json  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  state.rs
src-tauri/src/design_commands/: mod.rs  state.rs
src-tauri/src/server_commands/: handlers.rs  mod.rs  performance_types.rs  server_controller.rs
src-tauri/static/: config.json  index.html
src-tauri/static/assets/: index-Bs9gcmS2.js  index-C747bnj5.css  index-COKBzcYb.js  index-DVOwo7Ju.js  index-DdTu6DVF.css  index-Na7EwUC_.js  index-liqNd8zK.js
src/context/: MessageTypes.ts
src/pages/: JoinPage.tsx  MainPage.tsx  PlayPage.tsx  SessionPage.tsx  SyncPage.tsx
testing_ac/: buffer.json  gen_json_ref.py  testing_ac.py
(+19 files in other folders)
