[package]
name = "rtpc-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Diego Alderete"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
# name = "rtpc_app_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri and plugins
tauri               = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
warp = { version = "0.3", default-features = false, features = ["websocket", "tls"] }

# WebSocket over Tokio
tokio-tungstenite = "0.20"

# TLS
rustls          = "0.23"
rustls-pemfile  = "1.0"
tokio-rustls    = "0.26"

# All the rest
futures-util      = "0.3"
local-ip-address  = "0.5"
chrono            = "0.4.40"
uuid              = { version = "1.16.0", features = ["v4"] }
base64            = "0.22.1"
sha2 = "0.10.9"
hex = "0.4.3"



